--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -30,6 +30,10 @@ BR2_PACKAGE_RT_TESTS=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_STRESS_NG=y
+BR2_PACKAGE_GREP=y
+BR2_PACKAGE_SED=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI=y
 BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI=y
@@ -37,8 +41,9 @@ BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_815X=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/config.txt"
-BR2_PACKAGE_RPI_FIRMWARE_CMDLINE_FILE="board/raspberrypi5/cmdline_5.txt"
+BR2_PACKAGE_RPI_FIRMWARE_CMDLINE_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/cmdline.txt"
 # BR2_PACKAGE_RPI_FIRMWARE_INSTALL_DTB_OVERLAYS is not set
+BR2_PACKAGE_PARTED=y
 BR2_PACKAGE_OPENJDK=y
 BR2_PACKAGE_OPENJDK_JVM_VARIANT_CLIENT=y
 BR2_PACKAGE_PYTHON3=y
@@ -53,6 +58,7 @@ BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PURE_FTPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_WGET=y
+BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_COREUTILS=y
