--- a/package/raspi-utils/Config.in
+++ b/package/raspi-utils/Config.in
@@ -1,5 +1,5 @@
-config BR2_PACKAGE_RPI_UTILS
-	bool "rpi-utils"
+config BR2_PACKAGE_RASPI_UTILS
+	bool "raspi-utils"
 	depends on BR2_arm || BR2_aarch64
   depends on BR2_LINUX_KERNEL_DTS_SUPPORT
 	depends on BR2_TOOLCHAIN_HAS_THREADS
