--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -6,7 +6,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_CCACHE=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/patches"
 BR2_DOWNLOAD_FORCE_CHECK_HASHES=y
-BR2_TARGET_GENERIC_HOSTNAME="systemcore"
+BR2_TARGET_GENERIC_HOSTNAME="robot"
 BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="systemcore"
 BR2_SYSTEM_DHCP="eth0"
