--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -8,6 +8,7 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreatho
 BR2_DOWNLOAD_FORCE_CHECK_HASHES=y
 BR2_TARGET_GENERIC_HOSTNAME="robot"
 BR2_INIT_SYSTEMD=y
+BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/permission-table"
 BR2_TARGET_GENERIC_ROOT_PASSWD="systemcore"
 BR2_SYSTEM_DHCP="eth0"
 BR2_SYSTEM_DEFAULT_PATH="/bin:/sbin:/usr/bin:/usr/sbin"
