--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -59,6 +59,7 @@ BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PURE_FTPD=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_WGET=y
+BR2_PACKAGE_OPKG=y
 BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_SUDO=y
