--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -45,6 +45,8 @@ BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/boar
 BR2_PACKAGE_RPI_FIRMWARE_CMDLINE_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/cmdline.txt"
 # BR2_PACKAGE_RPI_FIRMWARE_INSTALL_DTB_OVERLAYS is not set
 BR2_PACKAGE_PARTED=y
+BR2_PACKAGE_PCIUTILS=y
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_LIBCAP_TOOLS=y
 BR2_PACKAGE_NCURSES_TARGET_PROGS=y
