add some tools, fix gradlerio deploy (needs ldconfig)

--- a/configs/systemcoreathome_defconfig
+++ b/configs/systemcoreathome_defconfig
@@ -25,14 +25,20 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2712-rpi-5-b broadcom/bcm2712d0-rp
 BR2_LINUX_KERNEL_INTREE_DTSO_NAMES="overlays/spi1-3cs overlays/mcp251xfd overlays/disable-bt-pi5"
 BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
+BR2_PACKAGE_LINUX_TOOLS_CPUPOWER=y
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_XZ=y
 BR2_PACKAGE_RT_TESTS=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_STRESS_NG=y
+BR2_PACKAGE_BINUTILS=y
+BR2_PACKAGE_BINUTILS_TARGET=y
 BR2_PACKAGE_GREP=y
 BR2_PACKAGE_SED=y
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
+BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 BR2_PACKAGE_XORG7=y
@@ -45,7 +51,6 @@ BR2_PACKAGE_RPI_FIRMWARE_CONFIG_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/boar
 BR2_PACKAGE_RPI_FIRMWARE_CMDLINE_FILE="$(BR2_EXTERNAL_systemcoreathome_PATH)/board/systemcoreathome/cmdline.txt"
 # BR2_PACKAGE_RPI_FIRMWARE_INSTALL_DTB_OVERLAYS is not set
 BR2_PACKAGE_PARTED=y
-BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_LIBCAP_TOOLS=y
